Fix - Add paragraph spacing to editor layout
Better matches rendered output.

--- a/src/components/dashboard/report/genomic/analystComments/analystComments.scss
+++ b/src/components/dashboard/report/genomic/analystComments/analystComments.scss
@@ -10,3 +10,11 @@
     
   }
 }
+
+
+.ql-editor {
+  p {
+    margin: 8px 0 !important;
+
+  }
+}
